added the path variable to pug attributes.

--- a/src/html/_layout/_page-with-preload.pug
+++ b/src/html/_layout/_page-with-preload.pug
@@ -17,4 +17,4 @@ html(lang="ja")
       .js-pjax-contents-after
         block contentFixedAfter
     block script
-    script(src="/pjax/js/main_with_preload.js" async)
+    script(src=`${data.meta.path}/js/main_with_preload.js` async)
