--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -14,4 +14,4 @@ html(lang="ja")
       .js-pjax-contents-after
         block contentFixedAfter
     block script
-    script(src="/pjax/js/main.js" async)
+    script(src=`${data.meta.path}/js/main.js` async)
